--- a/views/partials/header/Header.jade
+++ b/views/partials/header/Header.jade
@@ -40,7 +40,7 @@ div.header(ng-controller="navigationCtrl")
                             li
                                 a.btn(href="/leaderboard") PGA leaderboard
                             li
-                                a.btn(href="/maps") Boise Food Truck Tweet Map
+                                a.btn(href="/maps") Boise tweets
 
 
 
