--- a/views/index.jade
+++ b/views/index.jade
@@ -21,9 +21,9 @@ html(ng-app="mattLovan")
 
         script(src='js/lib/Angular1.2.js')
         script(src='js/lib/ngRoute.js')
+        script(src='js/lib/ngResource.js')
         script(src='js/lib/ngAnimate.js')
         script(src='js/lib/AngularUI.js')
-        script(src='js/lib/uiSlider.js')
         script(src='js/app.js')
         script(src='js/controllers.js')
         script(src='js/directives.js')
