--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -176,6 +176,7 @@ input::-webkit-inner-spin-button {
     background: rgba(31, 56, 63, 0.8);
     border: solid 1px #00B4CC;
     border-radius: 0;
+    min-height: 150px;
 }
 
 /*Multiply Game*/
@@ -299,17 +300,25 @@ td > button {
 
 .map{
     margin-top: 20px;
-    height: 485px;
+    height: 447px;
 }
 
 .tweetPic{
-    width: 32px;
-    height: 32px;
+    width: 40px;
+    height: 40px;
     border: solid 1px white;
     border-radius: 3px;
-    margin-right: 10px;
+    margin-right: 15px;
 }
 
+.tweetWell{
+    height:150px;
+    overflow: hidden;
+}
+
+.tweetInfo{
+    font-size: 70%;
+}
 
 /*____Loading Spinner*/
 .wrapperloading {
