--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -306,8 +306,10 @@ td > button {
 .tweetPic{
     width: 40px;
     height: 40px;
-    border: solid 1px white;
-    border-radius: 3px;
+    border-top: solid 1px white;
+    border-right: solid 1px white;
+    border-left: solid 1px white;
+    border-radius: 3px 3px 0 0;
     margin-right: 15px;
 }
 
