--- a/views/partials/demos/maps.jade
+++ b/views/partials/demos/maps.jade
@@ -1,14 +1,18 @@
 
-h2 boise tweets (in progress)
-  small  within 6KM of 43.6229° N 116.2394° W
+h2 tweets (in progress)
+  small  within 15mi of {{centerLat}}°N {{centerLng * -1}}°W
 
-.btn-group
-  button.btn.btn-primary.btn-sm(ng-click="boiseTweets()") recent
-  button.btn.btn-primary.btn-sm(ng-click="bsuTweets()") bsu
-  button.btn.btn-primary.btn-sm(ng-click="sportsTweets()") sports
-  button.btn.btn-primary.btn-sm(ng-click="newsTweets()") news
-  button.btn.btn-primary.btn-sm(ng-click="foodTruckTweets()") food trucks
-.clearfix
+
+ul.list-inline
+  li
+    h4 Search:
+  li
+    .btn-group
+      button.btn.btn-primary.btn-sm(ng-click="getTweets('all')", ng-class="{active: tweetSearchType == 'all'}") recent local
+      button.btn.btn-primary.btn-sm(ng-click="getTweets('boise')", ng-class="{active: tweetSearchType == 'boise'}") boise
+      button.btn.btn-primary.btn-sm(ng-click="getTweets('news')", ng-class="{active: tweetSearchType == 'news'}") boise news
+      button.btn.btn-primary.btn-sm(ng-click="getTweets('foodTruck')", ng-class="{active: tweetSearchType == 'foodTruck'}") boise food trucks
+      button.btn.btn-primary.btn-sm(ng-click="getTweets('blessed')", ng-class="{active: tweetSearchType == 'blessed'}") #blessed
 
 .row
   .col-md-8
@@ -27,7 +31,7 @@ h2 boise tweets (in progress)
         gm-markers(gm-objects='twitterData.statuses', gm-get-lat-lng='{ lat: object.geo.coordinates.0, lng: object.geo.coordinates.1 }', gm-get-marker-options='getTweetOpts(object)', gm-on-click="tweet = object; infoWindow.open(marker.getMap(), marker); selectTweet(object, marker);")
 
 
-  .col-md-4(class="animate-repeat", ng-repeat="tweet in twitterData.statuses")
+  .col-md-4(ng-repeat="tweet in twitterData.statuses")
     .panel.tweetWell
       h3
         a(href="{{tweet.user.url}}", target="_blank")
