zoom out, remove logo, adjust marker images

--- a/views/partials/demos/maps.jade
+++ b/views/partials/demos/maps.jade
@@ -14,6 +14,8 @@ ul.list-inline
       button.btn.btn-primary.btn-sm(ng-click="getTweets('foodTruck')", ng-class="{active: tweetSearchType == 'foodTruck'}") boise food trucks
       button.btn.btn-primary.btn-sm(ng-click="getTweets('blessed')", ng-class="{active: tweetSearchType == 'blessed'}") #blessed
 
+h4 * Most tweets to do not have location data - click search buttons to refresh *
+
 .row
   .col-md-8
     .panel
