--- a/views/partials/Consulting2.jade
+++ b/views/partials/Consulting2.jade
@@ -3,7 +3,7 @@
         h2.shade background
 
     .col-sm-8.panel
-        h3 government consulting
+        h3 software developer
         p
             span.glyphicon.glyphicon-tower
             |  6 years of experience implementing financial systems for government revenue agencies
