add instructions to map title

--- a/views/partials/demos/maps.jade
+++ b/views/partials/demos/maps.jade
@@ -3,9 +3,10 @@
 .row
   .col-md-1
   .col-md-10
-    h2
+    h2 click on the
+      label.sr-only map icon
       img.twitterTitleIcon(ng-src="fonts/twitter_mapMarker_yellow.svg")
-      | search twitter
+      | to view the tweet
       small  coordinates: {{centerLat}}°N - {{centerLng * -1}}°W
 
 
