--- a/views/index.jade
+++ b/views/index.jade
@@ -34,7 +34,7 @@ html(ng-app="mattLovan")
         script(src='//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js')
         script(src='//angulargm.herokuapp.com/angular-gm-0.2.0.min.js')
 
-        script
+        script.
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
