cleanup unused code

--- a/views/partials/Demos.jade
+++ b/views/partials/Demos.jade
@@ -13,6 +13,7 @@
             a(href="/leaderboard")
             | PGA leaderboard that computes 4 different scoring styles </a>
 
+        a.btn(href="/maps") Twitter map
 
 
     .col-sm-3
